--- a/index.html
+++ b/index.html
@@ -5,14 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Let's-Do-It-Together</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <title>Let's-Do-It-Together</title>
+
 </head>
 
 <body>
-    <h1 class="ad">Hello mama miya</h1>
+    <section class="top">
+        <div class="header">
+            <h1 class="invitation">Let's Help Those Who Are <br> More In Need</h1>
+            <p class="description">
+                The sufferings of the flood-affected people this year are beyond description. <br> Lack of food and
+                shelter
+                have made the situation worse. Only if we come forward to help them, their sufferings can be lessened a
+                bit
+            </p>
+            <p>
+                <a class="button" target="_blank" href="">Donate Now</a>
+            </p>
+        </div>
+    </section>
 </body>
 
 </html>
