two portions are added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,59 @@
             </p>
         </div>
     </section>
+    <section>
+        <div class="donate">
+            <h1>Donate Today</h1>
+            <p>
+                Your little donation can be a big help to someone others. It depends on you how much you want to donate.
+            </p>
+        </div>
+        <div class="amount">
+            <p>
+            <h2 id="gray">100tk</h1>
+                </p>
+                <p>
+                <h2 id="select">200tk</h2>
+                </p>
+                <p>
+                <h2 id="gray">500tk</h2>
+                </p>
+                <p>
+                <h2 id="gray">1000tk</h2>
+                </p>
+                <p>
+                <h2 id="gray">5000tk</h2>
+                </p>
+        </div>
+    </section>
+    <section>
+        <div class="plan">
+            <h1>Our Donate Plan</h1>
+            <p>We want to reach every affected family with food and other things. We want to help each and everyone</p>
+        </div>
+        <div class="idea">
+            <div class="food">
+                <img src="food.png" alt="">
+                <h2>Food for a family</h2>
+                <p>We want to ensure food for each member of a family and we want to provide enough food for them.
+                    Without food it is quite impossible in this moment.</p>
+            </div>
+            <div class="shelter">
+                <img src="shelter.png" alt="">
+                <h2>Shelter for a family</h1>
+                    <p>A lot of people have lost their home and belongings. They have taken shelter in a school or
+                        mosque.
+                        We want to provide permanent shelter for those people</p>
+            </div>
+            <div class="education">
+                <img src="Frame-1.png" alt="">
+                <h2>Education for a child</h2>
+                <p>Education is one of the most important basic human rights. But for those who are not even getting
+                    their food properly, it is too tough for them to get their students get admitted into school. We
+                    want to help those people.</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
