--- a/index.html
+++ b/index.html
@@ -81,6 +81,18 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="update">
+            <h1>Get My Updates</h1>
+            <p>To get my update about our progess of helping the affected, you can simply subscribe by putting your
+                e-mail address</p>
+        </div>
+        <div class="input">
+            <input type="email" class="mail" placeholder="Email">
+            <button class="sub">Subscribe</button>
+
+        </div>
+    </section>
 </body>
 
 </html>
