--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <title>Let's-Do-It-Together</title>
 
 </head>
@@ -52,6 +55,12 @@
                 <h2 id="gray">5000tk</h2>
                 </p>
         </div>
+        <form class="other">
+            <input class="other-amount" type="text" placeholder="Other Amount(Taka)">
+            <p>
+                <a class="button" target="_blank" href="">Donate Now</a>
+            </p>
+        </form>
     </section>
     <section>
         <div class="plan">
@@ -81,6 +90,21 @@
             </div>
         </div>
     </section>
+    <section class="more-about-them">
+        <div class="para">
+            <h1>They have the equal right to live</h1>
+            <p>
+                As a human being, everyone is similar. Everyone has the same right to live with dignity and peace. But
+                there is nothing to do with the natural disasters. But we can make things better together. <br> <br>
+            </p>
+            <p>
+                <a class="button" target="_blank" href="">Read More</a>
+            </p>
+        </div>
+        <div>
+            <p class="pic"><img src="donation8.jpg" alt="" height="400" width="500"></p>
+        </div>
+    </section>
     <section>
         <div class="update">
             <h1>Get My Updates</h1>
@@ -90,9 +114,12 @@
         <div class="input">
             <input type="email" class="mail" placeholder="Email">
             <button class="sub">Subscribe</button>
-
         </div>
     </section>
+    <footer>
+        <h1 class="humble">Be Humble</h1>
+        <p class="do">I'm gonna do it</p>
+    </footer>
 </body>
 
 </html>
